[gd_scene load_steps=4 format=3 uid="uid://btmwowuhfqi3u"]

[ext_resource type="Script" path="res://menus/Options.gd" id="1_ecak1"]
[ext_resource type="Texture2D" uid="uid://cpfr8yor2kg4x" path="res://menus/background-frames/background.tres" id="2_yf36v"]
[ext_resource type="AudioStream" uid="uid://hrwjjx8c5a0i" path="res://audio/click.mp3" id="3_ksy31"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecak1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yf36v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 103.0
offset_top = -187.0
offset_right = 318.0
offset_bottom = -81.0
grow_vertical = 0
alignment = 2

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -378.0
offset_top = -204.0
offset_right = 379.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.5
offset_top = 21.0
offset_right = 36.5
offset_bottom = 45.0
grow_horizontal = 2
text = "Settings
"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.5
offset_top = -127.5
offset_right = 267.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resolution" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Resolution"]
layout_mode = 2
text = "Difficulty      
"

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_vertical = 4

[node name="Fullscreen" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Fullscreen"]
layout_mode = 2
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/Fullscreen"]
layout_mode = 2

[node name="VSync" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/VSync"]
layout_mode = 2
text = "Vsync        "

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/VSync"]
layout_mode = 2

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ksy31")

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="Panel/VBoxContainer/Resolution/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Panel/VBoxContainer/Fullscreen/CheckButton" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/VSync/CheckButton" to="." method="_on_vsync_toggled"]
[connection signal="finished" from="click" to="." method="_on_click_finished"]
